--- a/CinePlanet-FrontEnd/FronEnd-NavBar/src/NavBar.css
+++ b/CinePlanet-FrontEnd/FronEnd-NavBar/src/NavBar.css
@@ -1,11 +1,11 @@
 nav {
-  background-color: #f0f0f0;
+  background-color: #FFFFFF;
   position: fixed;
   width: 100%;
   top: 0;
   left: 0;
   padding: 10px;
-  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1); 
+  box-shadow: 0px 10px 5px -5px rgba(0, 0, 0, 0.1);
 }
 
 nav ul {
@@ -13,7 +13,7 @@ nav ul {
   margin: 0;
   padding: 0;
   display: flex;
-  justify-content: center; 
+  justify-content: center;
   align-items: center;
 }
 
@@ -23,36 +23,34 @@ nav li {
 
 nav a {
   text-decoration: none;
-  color: #333;
-  font-weight: bold;
+  color: #0E2041;
   padding: 10px 15px;
-  border-radius: 5px;
-  transition: background-color 0.3s ease;
 }
 
 nav a:hover {
-  background-color: #e0e0e0;
+  font-weight: bold;
+  border-bottom: 4px solid #E50246;
+  
 }
 
 nav a.active {
-  background-color: #007bff; 
-  color: #fff;
+  font-weight: bold;
 }
 
 @media (max-width: 768px) {
   nav ul {
-    flex-direction: column; 
+    flex-direction: column;
     align-items: flex-start;
-    background-color: #fff; 
     position: absolute;
     top: 100%;
     left: 0;
     right: 0;
     z-index: 999;
-    display: none; 
+    display: none;
   }
 
   nav.open ul {
     display: block;
   }
 }
+
