--- a/FrontEnd-Cines/src/App.css
+++ b/FrontEnd-Cines/src/App.css
@@ -12,9 +12,11 @@ body {
   width: 100%;
 }
 
+
+
 .footer {
-  background-color: #ffffff;
-  color: rgb(0, 0, 0);
+  background-color: #000000;
+  color: rgb(255, 255, 255);
   text-align: center;
   padding: 16px;
   position: relative;
