--- a/FrontEnd-Cines/src/App.css
+++ b/FrontEnd-Cines/src/App.css
@@ -2,14 +2,16 @@ body {
   margin: 0;
   font-family: Arial, sans-serif;
   background-color: #ffffff;
+  
+  
 }
 
 .header {
-  background-color: #ffffff;
-  color: rgb(0, 0, 0);
-  padding: 16px;
+  background-color: #000000;
+  color: rgb(255, 255, 255);
+  
   text-align: center;
-  width: 100%;
+  
 }
 
 
@@ -18,8 +20,8 @@ body {
   background-color: #000000;
   color: rgb(255, 255, 255);
   text-align: center;
-  padding: 16px;
+  
   position: relative;
   bottom: 0;
-  width: 100%;
+  
 }
