--- a/FrontEnd-Cines/src/components/CineCard.css
+++ b/FrontEnd-Cines/src/components/CineCard.css
@@ -1,7 +1,7 @@
 .cine-card {
-    border: 5px solid #000000;
+    border: 5px solid #0b058e;
     border-radius: 8px;
-    padding: 16px;
+    padding: 7px;
     text-align: center;
     background-color: #ffffff;
     color: #000;
@@ -9,12 +9,18 @@
     flex-direction: column;
     align-items: center;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    max-width: 300px; /* Limita el tamaño máximo de las tarjetas */
+    height: auto; /* Evita que las tarjetas se hagan demasiado grandes */
+    overflow: hidden; /* Evita el desbordamiento de contenido */
+    margin-bottom: 1px; /* Espacio entre filas */
   }
   
   .cine-card-img {
+    
     max-width: 100%;
+    height: auto; /* Mantén la proporción de la imagen */
     border-radius: 8px;
-    border:4px solid #000;
+   
     padding: 2px;
     box-sizing: border-box;
     display: block;
@@ -22,4 +28,7 @@
 
     
   }
-  
+  .cine-card h2,
+  .cine-card p {
+    margin: 2px 0; /* Espacio vertical de 2px */
+  }
