--- a/FrontEnd-Cines/src/components/CinePage.css
+++ b/FrontEnd-Cines/src/components/CinePage.css
@@ -1,22 +1,35 @@
-/* CinePage.css */
 .title {
-    font-size: 2em;
-    margin-bottom: 20px;
-    text-align: center;
-    font-size: 2rem;
-    color: #000000;
     
-  
-  }
-  
-  .cine-grid {
-    gap: 20px;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    padding: 20px;
+    margin-bottom: 20px;
+    text-align:left;
+    font-size: 3rem;
+    color: #ffffff;
+    padding-left: 50px;
+    padding-top: 10px;
+    padding-bottom: 3px;
+    
+}
+
+.cine-grid {
+    gap: 30px;
+    display:grid;
+    grid-template-columns: repeat(4, 1fr);
+    padding-block: 2%;
     width: 100%;
     align-items: center;
     background-color: #ffffff;
-  }
- 
-  
+    padding-inline: 30px; /* Espacio del 2% a los lados */
+    justify-content: center; 
+    max-width: 1200px;
+
+}
+.cajatitle {
+    background-color: #0b058e;
+    width: 100%;
+    height: 80px;
+
+}
+.caja-pagina {
+    width: 100%;
+    align-items: center;
+}
