--- a/CinePlanet-FrontEnd/src/styles/Promocion.css
+++ b/CinePlanet-FrontEnd/src/styles/Promocion.css
@@ -1,60 +1,58 @@
 .promotion-card {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-color: #1E5FCC;
+  margin: 10% 20% 10% 30%;
   color: white;
   padding: 20px;
   border-radius: 8px;
   font-family: Arial, sans-serif;
+  align-items: center;
+  justify-content: space-between;
 }
 
-.promotion-text h1 {
-  font-size: 24px;
-  margin-bottom: 15px;
+.promotion-text {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding-right: 20px;
+  color: #014A8C;
+}
+
+.Titulo-promocion {
+  font-size: 50px;
+  margin-bottom: 8px;
 }
 
 .promotion-text p {
-  font-size: 16px;
-  margin-bottom: 20px;
+  font-size: 18px;
 }
 
 .terms-button {
-  background-color: transparent;
-  border: none;
-  color: white;
-  text-decoration: underline;
-  cursor: pointer;
+  background-color: white;
+  color: #014A8C;
+  border-color: #014A8C;
+  padding: 10px 20px;
   font-size: 14px;
-}
-
-.promotion-image img {
-  max-width: 100%;
-  height: auto;
-}
-
-.promotion-footer {
-  background-color: #143778;
-  width: 100%;
-  padding: 15px;
+  border-radius: 20px;
   text-align: center;
+  cursor: pointer;
+  transition: background-color 0.3s, box-shadow 0.3s;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
-.promotion-footer h2 {
-  font-size: 18px;
-  margin-bottom: 10px;
+.terms-button:hover {
+  box-shadow: 10px 10px rgba(1, 74, 140, 0.2);;
 }
 
-.discount span {
-  font-size: 32px;
-  font-weight: bold;
+.Imagen-promocion {
+  flex: 2; 
+  display: flex;
+  justify-content: center;
 }
 
-.discount small {
-  display: block;
-  font-size: 16px;
-}
-
-.promotion-footer p {
-  font-size: 14px;
+.Imagen-promocion img {
+  width: 70%;
+  height: auto;
+  max-height: 100%;
+  border-radius: 5px;
 }
