--- a/CinePlanet-FrontEnd/src/styles/Promocion.css
+++ b/CinePlanet-FrontEnd/src/styles/Promocion.css
@@ -1,6 +1,6 @@
 .promotion-card {
   display: flex;
-  margin: 10% 20% 10% 30%;
+  margin: 0% 0% 0% 0%;
   color: white;
   padding: 20px;
   border-radius: 8px;
@@ -9,7 +9,19 @@
   justify-content: space-between;
 }
 
-.promotion-text {
+.promotion-card:before,
+.promotion-card:after {
+  content: "";
+  flex: 1; 
+}
+
+.promotion-container { 
+  flex: 6; /
+  display: flex;
+  flex-direction: column;
+}
+
+.promotion-text { 
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -18,16 +30,16 @@
   color: #014A8C;
 }
 
-.Titulo-promocion {
+.Titulo-promocion { 
   font-size: 50px;
   margin-bottom: 8px;
 }
 
-.promotion-text p {
+.promotion-text p { 
   font-size: 18px;
 }
 
-.terms-button {
+.terms-button { 
   background-color: white;
   color: #014A8C;
   border-color: #014A8C;
@@ -40,19 +52,20 @@
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
-.terms-button:hover {
-  box-shadow: 10px 10px rgba(1, 74, 140, 0.2);;
+.terms-button:hover { 
+  box-shadow: 10px 10px rgba(1, 74, 140, 0.2);
 }
 
-.Imagen-promocion {
+.Imagen-promocion { 
   flex: 2; 
   display: flex;
   justify-content: center;
 }
 
-.Imagen-promocion img {
+.Imagen-promocion img { 
   width: 70%;
   height: auto;
   max-height: 100%;
   border-radius: 5px;
 }
+
