haciendo ultimos cambios

--- a/FrontEnd-Cines/src/components/CinePage.css
+++ b/FrontEnd-Cines/src/components/CinePage.css
@@ -18,7 +18,7 @@
     width: 100%;
     align-items: center;
     background-color: #ffffff;
-    padding-inline: 30px; /* Espacio del 2% a los lados */
+    padding-inline: 30px; 
     justify-content: center; 
     max-width: 1200px;
 
