--- a/FrontEnd-Cines/src/components/CineCard.css
+++ b/FrontEnd-Cines/src/components/CineCard.css
@@ -9,16 +9,16 @@
     flex-direction: column;
     align-items: center;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    max-width: 300px; /* Limita el tamaño máximo de las tarjetas */
-    height: auto; /* Evita que las tarjetas se hagan demasiado grandes */
-    overflow: hidden; /* Evita el desbordamiento de contenido */
-    margin-bottom: 1px; /* Espacio entre filas */
+    max-width: 300px; 
+    height: auto;
+    overflow: hidden;
+    margin-bottom: 1px; 
   }
   
   .cine-card-img {
     
     max-width: 100%;
-    height: auto; /* Mantén la proporción de la imagen */
+    height: auto; 
     border-radius: 8px;
    
     padding: 2px;
@@ -30,5 +30,5 @@
   }
   .cine-card h2,
   .cine-card p {
-    margin: 2px 0; /* Espacio vertical de 2px */
+    margin: 2px 0; 
   }
