--- a/CinePlanet-FrontEnd/src/styles/NavBar.css
+++ b/CinePlanet-FrontEnd/src/styles/NavBar.css
@@ -7,6 +7,7 @@ nav {
     padding: 10px;
     box-shadow: 0px 10px 5px -5px rgba(0, 0, 0, 0.1);
     z-index: 99999;
+    position: sticky;
 }
 
 nav ul {
