--- a/CinePlanet-FrontEnd/src/styles/CineCard.css
+++ b/CinePlanet-FrontEnd/src/styles/CineCard.css
@@ -12,7 +12,7 @@
     max-width: 300px; 
     height: auto;
     overflow: hidden;
-    margin-bottom: 5%; 
+    margin-bottom: 1px; 
   }
   
   .cine-card-img {
