--- a/CinePlanet_Proyect_PWEB2-Frontend/CinePlanet-FrontEnd/src/styles/Dulceria.css
+++ b/CinePlanet_Proyect_PWEB2-Frontend/CinePlanet-FrontEnd/src/styles/Dulceria.css
@@ -9,7 +9,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 20px;
+    padding: 10px;
     flex-wrap: wrap;
   }
   
@@ -161,7 +161,6 @@ body {
   }
 
   .Principal {
-    font-family: 'Playfair Display';
     font-size: 2rem; 
     font-weight: 700; 
     color: #0e0053cb; 
@@ -169,12 +168,9 @@ body {
     text-align: center; 
     letter-spacing: 2px; 
     text-shadow: 3px 3px 5px rgba(0, 0, 0, 0.2), 0 4px 6px rgba(0, 0, 0, 0.1); 
-  
     display: inline-block;
-    padding-bottom: 5px; 
-
     position: relative; 
-    top: 50px; 
+    margin-top: 10px;
 }
 .boton-pagar {
     background: linear-gradient(90deg, #0d00ff, #00fae1); 
@@ -188,9 +184,10 @@ body {
     text-transform: uppercase;
     cursor: pointer;
     transition: all 0.3s ease-in-out;
-    position: absolute; 
-    right: 20px; 
-    bottom: -500px; 
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    z-index: 1000;
 }
 
 .boton-pagar:hover {
