--- a/CinePlanet_Proyect_PWEB2-Frontend/CinePlanet-FrontEnd/src/styles/Socio.css
+++ b/CinePlanet_Proyect_PWEB2-Frontend/CinePlanet-FrontEnd/src/styles/Socio.css
@@ -1,88 +1,34 @@
-/* Register.css */
-.register-container {
+/* Socio.css */
+.socio {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
   height: 100vh;
   background-color: #f4f4f9;
 }
 
-.register-form {
-  background-color: #fff;
-  padding: 30px;
-  border-radius: 8px;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-  width: 400px;
-  max-width: 100%;
-}
-
-.form-title {
-  text-align: center;
-  margin-bottom: 20px;
-  font-size: 24px;
-  color: #0B1A33;
-}
-
-.form-group {
-  margin-bottom: 15px;
-}
-
-.form-label {
-  font-size: 14px;
-  font-weight: bold;
-  margin-bottom: 5px;
-  display: block;
-  color: #0B1A33;
-}
-
-.form-input {
-  width: 100%;
-  padding: 10px;
-  font-size: 16px;
-  border-radius: 4px;
-  border: 1px solid #ccc;
-  box-sizing: border-box;
-}
-
-.error {
-  color: red;
-  font-size: 12px;
-  margin-top: 5px;
-}
-
-.form-buttons {
+.form-container {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+  align-items: center;
+}
+
+.toggle-button {
   margin-top: 20px;
 }
 
-.btn-register,
-.btn-login {
+button {
   padding: 10px 20px;
   font-size: 16px;
+  color: #fff;
+  background-color: #0B1A33;
   border: none;
   border-radius: 4px;
   cursor: pointer;
-  transition: background-color 0.3s ease;
 }
 
-.btn-register {
+button:hover {
   background-color: #4caf50;
-  color: white;
-}
-
-.btn-register:hover {
-  background-color: #45a049;
-}
-
-.btn-login {
-  background-color: white;
-  color: #0B1A33;
-  border: 1px solid #0B1A33;
-}
-
-.btn-login:hover {
-  background-color: #0B1A33;
-  color: white;
 }
 
