--- a/CinePlanet_Proyect_PWEB2-Frontend/CinePlanet-FrontEnd/src/styles/IniciarSesion.css
+++ b/CinePlanet_Proyect_PWEB2-Frontend/CinePlanet-FrontEnd/src/styles/IniciarSesion.css
@@ -1,73 +1,135 @@
+
 .login-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  background-color: #f4f4f9;
+  width: 100%;                 
+  display: flex;              
+  justify-content: center;    
+  align-items: center;        
 }
 
 .login-form {
-  background-color: #fff;
-  padding: 30px;
-  border-radius: 8px;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-  width: 400px;
-  max-width: 100%;
+  width: 50%;                 
+  padding: 2%;                
+  background-color: #fff;    
+  border-radius: 5%;        
+  box-shadow: 0 2% 4% rgba(0, 0, 0, 0.1); 
 }
 
 .form-title {
-  text-align: center;
-  margin-bottom: 20px;
-  font-size: 24px;
-  color: #0B1A33;
+  text-align: center;       
+  color: #004080;           
+  font-family: 'Arial', sans-serif;
+  font-size-adjust: calc(0.8);      
+  font-weight: bold;       
+  margin-bottom: 1%;      
+}
+
+.form-text-bienvenida{
+  text-align: center;      
+  color: #004080;          
+  font-family: 'Arial', sans-serif; 
+  font-size: 0.8vw;     
+  margin-bottom: 1%;      
 }
 
 .form-group {
-  margin-bottom: 15px;
+  margin-bottom: 1%;     
 }
 
 .form-label {
-  font-size: 14px;
+  font-size: 1.1vw;             
   font-weight: bold;
-  margin-bottom: 5px;
-  display: block;
-  color: #0B1A33;
+  color: #004080;
+  margin-bottom: 2%;
 }
 
 .form-input {
   width: 100%;
-  padding: 10px;
-  font-size: 16px;
-  border-radius: 4px;
+  font-size: 1.1vw;            
+  padding: 2%;            
   border: 1px solid #ccc;
-  box-sizing: border-box;
+  border-radius: 5px;
+}
+
+.form-input:focus {
+  border-color: #0f5ccf;
+  outline: none;
 }
 
 .error {
-  color: red;
-  font-size: 12px;
-  margin-top: 5px;
+  color: #e2003a;
+  font-size: 0.9vw;
+  margin-top: 0.5%;
 }
 
 .form-buttons {
-  display: flex;
-  justify-content: space-between;
-  margin-top: 20px;
+  display: flex;              
+  justify-content: center;   
+  margin-top: 2%;             
 }
 
 .btn-login {
-  padding: 10px 20px;
-  font-size: 16px;
-  border: 1px solid #0B1A33;
-  color: #0B1A33;
-  background-color: white;
-  border-radius: 4px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
+  width: 50%;          
+  padding: 1.5% 0;             
+  background: linear-gradient(180deg, #0052cc, #003da6); 
+  color: #ffffff;         
+  font-size: 1vw;             
+  font-weight: bold;           
+  text-align: center;      
+  border: none;            
+  border-radius: 50px;     
+  cursor: pointer;         
+  transition: background 0.3s ease, transform 0.2s ease; 
 }
 
 .btn-login:hover {
-  background-color: #0B1A33;
-  color: white;
+  background: linear-gradient(180deg, #c90033, #a00028);
+  transform: scale(1.05);       
 }
 
+@media (max-width: 768px) {
+  .login-form {
+    width: 100%;              
+    padding: 4%;              
+  }
+  .form-title {
+    font-size: 6vw;            
+    margin-bottom: 3%;         
+  }
+  .form-text-bienvenida{
+    font-size: 3vw;
+  }
+  .btn-login {
+    margin-top: 2%;
+    font-size: 3.5vw;            
+  }
+  .form-group { 
+    margin-bottom: 2%;
+  }
+  .form-label { 
+    font-size: 3vw;
+    margin-bottom: 1%; 
+  }
+  .form-input {
+    font-size:3vw;           
+    padding: 3%;             
+    border: 1px solid #ccc;
+    border-radius: 5px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .login-form {
+    width: 35%;                
+    padding: 2.5%;             
+  }
+  
+  .form-title {
+    font-size: 1.8vw;          
+    margin-bottom: 2%;      
+  }
+
+  .form-text-bienvenida {
+    font-size: 1vw;           
+    margin-bottom: 3%;
+  }
+}
