--- a/CinePlanet_Proyect_PWEB2-Frontend/CinePlanet-FrontEnd/src/styles/Socio.css
+++ b/CinePlanet_Proyect_PWEB2-Frontend/CinePlanet-FrontEnd/src/styles/Socio.css
@@ -1,34 +1,54 @@
-/* Socio.css */
 .socio {
+  width: 80%;             
+  margin:5% auto;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  height: 100vh;
-  background-color: #f4f4f9;
+  flex-direction: column;   
+  align-items: center;     
+
 }
 
 .form-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  width: 100%;            
 }
 
 .toggle-button {
-  margin-top: 20px;
+  width: 100%;              
+  display: flex;            
+  justify-content: center;  
+  margin-top: 5%;           
 }
 
-button {
-  padding: 10px 20px;
-  font-size: 16px;
-  color: #fff;
-  background-color: #0B1A33;
-  border: none;
-  border-radius: 4px;
+.toggle-button button {
+  width: 60%;                  
+  padding: 2% 2%;                   
+  border: none;                  
+  border-radius: 50px;            
+  background: linear-gradient(90deg, #e2003a, #c90033); 
+  color: #ffffff;               
+  font-size: 1vw;                 
+  font-weight: bold;
+  text-align: center;             
   cursor: pointer;
+  transition: all 0.3s ease; 
 }
 
-button:hover {
-  background-color: #4caf50;
+.toggle-button button:hover {
+  background: linear-gradient(90deg, #c90033, #a00028);
+  transform: scale(1.05);       
 }
 
+@media (max-width: 768px) {
+  .toggle-button button {
+    width: 70%;             
+    font-size: 3vw;
+    padding: 3% 5%;              
+  }
+}
+
+@media (min-width: 1200px) {
+  .toggle-button button {
+    width: 25%;              
+    font-size: 0.9vw;       
+    padding: 1.5% 2%;       
+  }
+}
