--- a/CinePlanet_Proyect_PWEB2-Frontend/CinePlanet-FrontEnd/src/styles/CineCard.css
+++ b/CinePlanet_Proyect_PWEB2-Frontend/CinePlanet-FrontEnd/src/styles/CineCard.css
@@ -1,31 +1,31 @@
 .cine-card {
-  border: 5px solid #0b1a33; /* Cambiado de 5px a 1% */
-  border-radius: 2%; /* Cambiado de 8px a un valor proporcional */
-  padding: 2%; /* Cambiado de 7px a un porcentaje */
+  border: 5px solid #0b1a33; 
+  border-radius: 2%; 
+  padding: 2%; 
   text-align: center;
   background-color: #ffffff;
   color: #000;
   display: flex;
   flex-direction: column;
   align-items: center;
-  box-shadow: 0 0 3% rgba(0, 0, 0, 0.1); /* Adaptado para mantener el sombreado proporcional */
-  max-width: 90%; /* Cambiado de 300px a un porcentaje de contenedor */
+  box-shadow: 0 0 3% rgba(0, 0, 0, 0.1); 
+  max-width: 90%; 
   height: auto;
   overflow: hidden;
-  margin-bottom: 0.5%; /* Cambiado de 1px a porcentaje */
+  margin-bottom: 0.5%; 
 }
 
 .cine-card-img {
   max-width: 100%;
   height: auto; 
-  border-radius: 2%; /* Cambiado de 8px a un porcentaje */
-  padding: 0.5%; /* Cambiado de 2px a un porcentaje */
+  border-radius: 2%; 
+  padding: 0.5%; 
   box-sizing: border-box;
   display: block;
-  margin-bottom: 2%; /* Cambiado de 10px a un porcentaje */
+  margin-bottom: 2%; 
 }
 
 .cine-card h2,
 .cine-card p {
-  margin: 0.5% 0; /* Cambiado de 2px a un porcentaje */
+  margin: 0.5% 0; 
 }
