--- a/CinePlanet_Proyect_PWEB2-Frontend/CinePlanet-FrontEnd/src/styles/CineCard.css
+++ b/CinePlanet_Proyect_PWEB2-Frontend/CinePlanet-FrontEnd/src/styles/CineCard.css
@@ -1,7 +1,8 @@
 .cine-card {
   border: 5px solid #0b1a33; 
   border-radius: 2%; 
-  padding: 2%; 
+  padding-top: 2%; 
+  padding-bottom: 2%;
   text-align: center;
   background-color: #ffffff;
   color: #000;
@@ -9,23 +10,34 @@
   flex-direction: column;
   align-items: center;
   box-shadow: 0 0 3% rgba(0, 0, 0, 0.1); 
-  max-width: 90%; 
-  height: auto;
+  max-width: 100%; 
+  height: 50%;
   overflow: hidden;
-  margin-bottom: 0.5%; 
+  gap: 2px;
 }
 
 .cine-card-img {
   max-width: 100%;
-  height: auto; 
-  border-radius: 2%; 
-  padding: 0.5%; 
+  max-height: 50%; 
+  border-radius: 5%; 
+  
   box-sizing: border-box;
-  display: block;
-  margin-bottom: 2%; 
+ 
 }
 
-.cine-card h2,
-.cine-card p {
-  margin: 0.5% 0; 
+.cine-card h2 {
+
+  font-size: 1vw;
+  font-weight: bold; 
+  color: #011a44;
+  font-weight: 700;
+  
+
+}
+.formatos {
+  
+  font-size: 1vw;
+  font-weight: bold; 
+  font-weight: 500;
+  
 }
