--- a/CinePlanet_Proyect_PWEB2-Frontend/CinePlanet-FrontEnd/src/styles/CineForm.css
+++ b/CinePlanet_Proyect_PWEB2-Frontend/CinePlanet-FrontEnd/src/styles/CineForm.css
@@ -1,45 +1,45 @@
 .cine-form-overlay {
     position: fixed;
     top: 0;
-    left: 0;
-    width: 100%;
+    right: 0;
+    width: 30%; 
     height: 100%;
-    background: rgba(0, 0, 0, 0.5);
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
   }
   
   .cine-form-container {
-    background: white;
-    padding: 20px;
+    background: rgb(255, 255, 255);
+    padding: 5%; 
     border-radius: 10px;
-    width: 400px;
+    width: 90%; 
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     position: relative;
+    color: #034892;
   }
   
   .close-button {
     position: absolute;
-    top: 10px;
-    right: 10px;
+    top: 2%;
+    right: 2%;
     background: none;
     border: none;
-    font-size: 20px;
+    font-size: 2vw; 
     cursor: pointer;
   }
   
   form input {
     width: 100%;
-    margin-bottom: 10px;
-    padding: 10px;
+    margin-bottom: 5%;
+    padding: 3%; 
     border: 1px solid #ccc;
     border-radius: 5px;
   }
   
   form button {
     width: 100%;
-    padding: 10px;
+    padding: 3%; 
     background-color: #007bff;
     color: white;
     border: none;
@@ -50,4 +50,3 @@
   form button:hover {
     background-color: #0254ab;
   }
-  
