--- a/CinePlanet_Proyect_PWEB2-Frontend/CinePlanet-FrontEnd/src/styles/Admi.css
+++ b/CinePlanet_Proyect_PWEB2-Frontend/CinePlanet-FrontEnd/src/styles/Admi.css
@@ -1,16 +1,12 @@
-.main-container {
-    padding-top: 50px; /* Espacio desde el inicio de la página */
-}
-
 .nav-container {
     background-color: #FFFFFF;
-    position: sticky;
-    top: 50px; /* Posición inicial más abajo */
+    position: relative;
+    top: 50px; 
     left: 0;
     width: 100%;
     padding: 10px;
     box-shadow: 0px 10px 5px -5px rgba(0, 0, 0, 0.1);
-    z-index: 99999;
+    margin-bottom: 5%;
 }
 
 ul {
@@ -40,5 +36,20 @@ li:hover {
 li.active {
     background-color: #007bff;
     color: #fff;
+}
+
+@media (max-width: 768px) {
+    .nav-container {
+        top: 20px; 
+    }
+
+    ul {
+        flex-direction: column; 
+    }
+
+    li {
+        width: 100%; 
+        text-align: center; 
+    }
 }
 
