--- a/CinePlanet_Proyect_PWEB2-Frontend/CinePlanet-FrontEnd/src/styles/Admi.css
+++ b/CinePlanet_Proyect_PWEB2-Frontend/CinePlanet-FrontEnd/src/styles/Admi.css
@@ -3,7 +3,7 @@
     position: relative;
     top: 50px; 
     left: 0;
-    width: 100%;
+    width: 100%:
     padding: 10px;
     box-shadow: 0px 10px 5px -5px rgba(0, 0, 0, 0.1);
     margin-bottom: 5%;
