--- a/CinePlanet_Proyect_PWEB2-Frontend/CinePlanet-FrontEnd/src/styles/CineForm.css
+++ b/CinePlanet_Proyect_PWEB2-Frontend/CinePlanet-FrontEnd/src/styles/CineForm.css
@@ -1,7 +1,9 @@
 .cine-form-overlay {
-  position: fixed;
+  position: relative;
   top: 0;
-  left: 50%; 
+  margin-top: 10%;
+  left: 50%;
+  margin-bottom: 2%;
   transform: translateX(-50%);
   width: 30%; 
   height: 100%; 
