--- a/CinePlanet_Proyect_PWEB2-Frontend/CinePlanet-FrontEnd/src/styles/FormPromociones.css
+++ b/CinePlanet_Proyect_PWEB2-Frontend/CinePlanet-FrontEnd/src/styles/FormPromociones.css
@@ -1,10 +1,8 @@
 .FormPromociones{
-    top: 0;
-    left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.5);
     display: flex;
+    margin-bottom: 5%;
     justify-content: center;
     align-items: center;
     color: #003366; /
